# opengl-math-project

./: CMakeLists.txt  Dragon3DLight.cpp  Dragon3DLight.fs.glsl  Dragon3DLight.vs.glsl  GLShader.h  README.md
Headers/: Camera.h  ObjLoader.h  Quaternion.h
Sources/: Camera.cpp  ObjLoader.cpp  Quaternion.cpp
models/: Cottage.mtl
